[tool.poetry]
name = "pypong"
version = "0.1.0"
description = "Yet another pong game written in Python"
authors = ["Juliano Fernandes <julianofernandes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pygame = "2.0.0.dev10"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
isort = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
